--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <main>
 
 
-        <div class="background-animation">
+        <div class="background-animation"></div>
 
-        </div>
+        <header>
+            <h1>CloudPulse</h1>
+        </header>
 
-
-        <!-- <h4>CloudPulse</h4> -->
 
         <div class="main-container">
 
@@ -139,6 +139,10 @@
 
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone-with-data.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- <script src="./rainy.js library/rainyday.js/dist/rainyday.min.js"></script> -->
